[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccvag"
version = "0.1.0"
authors = [
    {name = "Kyle Sin Lynn", email = "kylesinlynn@gmail.com"},
]
description = "Credit Card Validator and Generator"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/kylesinlynn/luhn"
"Bug Tracker" = "https://github.com/kylesinlynn/luhn/issues"