[metadata]
name = Luhn
version = 0.0.1
author = Kyle Sin Lynn
author_email = kylesinlynn@gmail.com
url = https://github.com/kylesinlynn
description = Credit Card Validator using Luhn Algorithm
long_description = file: README.md
long_description_content_type = text/markdown
keywords = setuptools
license = BSD 4-Clause "Original" or "Old" License
project_urls =
    Bug Tracker = https://github.com/kylesinlynn/luhn/issues
    repository = https://github.com/kylesinlynn/luhn
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src